--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 	},
 	"homepage": "https://github.com/demosjarco/cloudflare-dns-updater#readme",
 	"dependencies": {
-		"dotenv": "^8.2.0",
-		"request": "^2.88.2"
+		"axios": "^0.19.2",
+		"dotenv": "^8.2.0"
 	}
 }
