--- a/.github/workflows/update-packages.yml
+++ b/.github/workflows/update-packages.yml
@@ -21,3 +21,11 @@ jobs:
         run: npm update --audit=false --fund=false
       - name: Update packages
         run: npm audit fix
+      - name: Setup Git
+        run: |
+          git config user.name "NPM Updater"
+          git config user.email "<>"
+      - name: Push updated back to repo
+        run: |
+          git commit -m "Updated packages"
+          git push
