--- a/.github/workflows/update-packages.yml
+++ b/.github/workflows/update-packages.yml
@@ -2,8 +2,7 @@ name: Update NPM Packages
 
 on:
   schedule:
-    - cron: '*/5 * * * *'
-    # - cron: '0 0 * * *'
+    - cron: '0 0 * * *'
 
 jobs:
   npm_update_linux:
