Exit code 1 (failure) is if diff exist

--- a/.github/workflows/update-packages.yml
+++ b/.github/workflows/update-packages.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Check git diff
         run: git diff-index --quiet HEAD
       - name: Commit changes
-        if: ${{ success() }}
+        if: ${{ failure() }}
         run: |
           git commit -m "Updated packages"
           git push
