--- a/.github/workflows/update-packages.yml
+++ b/.github/workflows/update-packages.yml
@@ -18,7 +18,7 @@ jobs:
         run: npm ci --audit=false --fund=false
       - name: Update packages
         run: npm update --audit=false --fund=false
-      - name: Update packages
+      - name: Audit packages
         run: npm audit fix
       - name: Setup Git
         run: |
